syntax = "proto3";

package chat;

option go_package = "./proto";

service ChatService{
    rpc Chat(stream ChatMessage) returns (stream ChatMessage);
}

message ChatMessage{
    string userId = 1;
    string recipientId = 2;
    string content = 3;
    int64 timestamp = 4;
}
